handle sonnar